--- a/solomon/app/layout/shell.html
+++ b/solomon/app/layout/shell.html
@@ -1,11 +1,22 @@
-﻿<!DOCTYPE html>
-
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div ng-controller="ShellController as vm">
+    <div class="top-bar">
+        Header
+    </div>
+    <div>
+        <div class="side-bar">
+            sidebar
+            <ul>
+                <li ng-repeat="item in vm.sections">
+                    {{item.name}}
+                </li>
+            </ul>
+            <a ui-sref="dashboard">Dashboard</a>
+        </div>
+        <div ui-view class="content">
+            {{vm.message}}
+        </div>
+    </div>
+    <div>
+        <pre>{{$state.current | json}}</pre>
+    </div>
+</div>
