--- a/solomon/wwwroot/styles/app.css
+++ b/solomon/wwwroot/styles/app.css
@@ -1,3 +1,21 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+.side-bar {
+  border: 1px solid red;
+  float: left;
+  width: 200px;
+}
+.content {
+  border: 1px solid black;
+  height: 100%;
+  margin-left: 200px;
+}
+.top-bar {
+  border: 1px solid green;
+}
 #splash-page {
   z-index: 99999 !important;
 }
