--- a/solomon/app/less/app.less
+++ b/solomon/app/less/app.less
@@ -1,4 +1,8 @@
-﻿@import "mixins";
+﻿@import "fonts";
+@import "typeography";
+
+@import "mixins";
 @import "layout";
 @import "splash";
+@import "login";
 @import "store";
