--- a/solomon/app/less/mixins.less
+++ b/solomon/app/less/mixins.less
@@ -1,7 +1,60 @@
-.clearfix:after{
-    content:"";
-    display:block;
-    height:0;
-    clear:both;
-    visibility:hidden;	
+@ribbon: rgb(142,166,54);
+@ribbon-dark: darken(@ribbon, 20%);
+
+.clearfix:after {
+    content: "";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.ribbon {
+    color: #fff;
+    margin: 10px 0 20px;
+    position: relative;
+    text-transform: uppercase;
+    background: @ribbon; //rgb(0, 164, 239);
+    border: 1px solid rgba(0, 0, 0, .3);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, .2);
+    padding: 10px 15px;
+    clear: both;
+    
+    h2 {
+        margin: 0 22px;
+        color: white;
+    }
+}
+.ribbon-fold-left {
+    color: #000;
+    margin-left: -20px;
+    // float: left;
+    z-index: 5;
+    // width: 100%;
+}
+.ribbon-fold-left::before {
+    display: block;
+    width: 20px;
+    height: 0px;
+    position: absolute;
+    bottom: -10px;
+    left: -1px;
+    content: "";
+    border-bottom: 10px solid transparent;
+    border-right: 20px solid @ribbon-dark; //rgb(0, 80, 116);
+}
+
+.ribbon-fold-right {
+	margin-right: -20px;
+}
+
+.ribbon-fold-right:after {
+	display: block;
+    width: 20px;
+    height: 0px;
+    position: absolute;
+    bottom: -10px;
+    right: 1px;
+    content: "";
+    border-bottom: 10px solid transparent;
+    border-left: 20px solid @ribbon-dark;
 }
