--- a/solomon/app/less/login.less
+++ b/solomon/app/less/login.less
@@ -1,32 +1,34 @@
 @import "mixins";
 #login {
-	font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-width: 100%;
-height: 100vh;
-background-image: url('../img/bg.jpg');
-//background-color: rgba(0,0,0,.1);
-background-color: white;
+    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 100%;
+    height: 100vh;
+    background-image: url('../img/bg.jpg');
+	overflow: hidden;
 
-    //border: 1px solid red;
-    border: 1px solid gray;
-    width: 400px;
-    margin: auto;
-    margin-top: 50px;
+    .login-box {
+        //background-color: rgba(0,0,0,.1);
+        background-color: white;
+        //border: 1px solid red;
+        border: 1px solid gray;
+        width: 400px;
+        margin: auto;
+        margin-top: 50px;
+        position: relative;
     
-    position: relative;
-    
-    .login-header {
-        //height: 42px;
-        background-color: rgb(200,200,200);
-        border-bottom: 1px solid gray;
-        //background-color: white;
-        padding: 10px;
-        h1 {
-            .font-thin;
-            margin: 0px;
+        .login-header {
+            //height: 42px;
+            background-color: rgb(200, 200, 200);
+            border-bottom: 1px solid gray;
+            //background-color: white;
+            padding: 10px;
+            h1 {
+                .font-thin;
+                margin: 0px;
+            }
         }
-    }
-    h2 {
-        .font-thin;
+        h2 {
+            .font-thin;
+        }
     }
 }
