--- a/solomon/app/less/splash.less
+++ b/solomon/app/less/splash.less
@@ -1,12 +1,17 @@
-﻿
-#splash-page {
+﻿#splash-page {
     z-index: 99999 !important;
-}
-
-    #splash-page .bar {
-        width: 100%;
+    &.ng-hide-add-active {
+        display: block!important;
+        -webkit-transition: 0.5s linear all;
+        transition: 0.5s linear all;
     }
-
+    &.ng-hide {
+        opacity: 0;
+    }
+}
+#splash-page .bar {
+    width: 100%;
+}
 .page-splash {
     z-index: 99999 !important;
     position: fixed !important;
@@ -15,7 +20,7 @@
     width: 100%;
     height: 100%;
     background-color: #333;
-    opacity: .9;
+    //opacity: .9;
     pointer-events: auto;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
@@ -27,7 +32,6 @@
     -o-transition: opacity 0.3s linear;
     transition: opacity 0.3s linear;
 }
-
 .page-splash-message {
     text-align: center;
     margin: 20% auto 0 auto;
@@ -42,8 +46,7 @@
     color: #F58A00;
     padding: 0;
 }
-
-    .page-splash-message.page-splash-message-subtle {
-        margin: 30% auto 0 auto;
-        font-size: 200%;
-    }
+.page-splash-message.page-splash-message-subtle {
+    margin: 30% auto 0 auto;
+    font-size: 200%;
+}
