--- a/solomon/app/less/layout.less
+++ b/solomon/app/less/layout.less
@@ -1,16 +1,9 @@
 ﻿html, body {
     margin: 0;
-    padding: 0;    
+    padding: 0;
 }
-
 body {
-	
-}
-
-.side-bar {
-    border: 1px solid red;
-    float: left;
-    width: 200px;
+    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .content {
@@ -19,6 +12,10 @@ body {
     margin-left: 200px;
 }
 
-.top-bar {
-    border: 1px solid green;
+.float-container {
+    //.clearfix;
+}
+
+.debug-panel {
+    margin-left: 200px;
 }
