--- a/qarin/app/less/app.less
+++ b/qarin/app/less/app.less
@@ -1,6 +1,9 @@
 ﻿@import "colors";
 @import "notificiations";
-
+@import "splash";
+@import "header";
+@import "components";
+ 
 body, html {
     margin: 0;
     padding: 0;
@@ -11,4 +14,8 @@ body, html {
     height: 640px;
     margin: 0 auto;
     border: 1px solid black;
+    position: relative;
+    background-color: #999; 
+
+    // color: white;
 }
