--- a/qarin/wwwroot/styles/app.css
+++ b/qarin/wwwroot/styles/app.css
@@ -2,6 +2,69 @@
   background-color: rosybrown;
   color: white;
 }
+#splash-page {
+  z-index: 99999 !important;
+}
+#splash-page.ng-hide-add-active {
+  display: block!important;
+  -webkit-transition: 0.5s linear all;
+  transition: 0.5s linear all;
+}
+#splash-page.ng-hide {
+  opacity: 0;
+}
+#splash-page .bar {
+  width: 100%;
+}
+.page-splash {
+  z-index: 99999 !important;
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  pointer-events: auto;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: opacity 0.3s linear;
+  -moz-transition: opacity 0.3s linear;
+  -o-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
+}
+.page-splash-message {
+  text-align: center;
+  margin: 20% auto 0 auto;
+  font-size: 400%;
+  font-family: "Segoe UI", Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  -webkit-text-shadow: 2px 2px #000000;
+  text-shadow: 2px 2px #000000;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.15);
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #F58A00;
+  padding: 0;
+}
+.page-splash-message.page-splash-message-subtle {
+  margin: 30% auto 0 auto;
+  font-size: 200%;
+}
+.top-bar {
+  background-color: green;
+  min-height: 30px;
+  color: white;
+}
+.vertical-button-container button {
+  text-align: center;
+  width: 80%;
+  padding: 10px;
+  margin: 10px auto;
+  display: block;
+}
 body,
 html {
   margin: 0;
@@ -12,4 +75,6 @@ html {
   height: 640px;
   margin: 0 auto;
   border: 1px solid black;
+  position: relative;
+  background-color: #999;
 }
