cleaned up chat

--- a/qarin/app/less/app.less
+++ b/qarin/app/less/app.less
@@ -3,7 +3,8 @@
 @import "splash";
 @import "header";
 @import "components";
- 
+@import "chat"; 
+
 body, html {
     margin: 0;
     padding: 0;
@@ -15,7 +16,7 @@ body, html {
     margin: 0 auto;
     border: 1px solid black;
     position: relative;
-    background-color: #999; 
+    //background-color: #999; 
 
     // color: white;
 }
