--- a/qarin/wwwroot/styles/app.css
+++ b/qarin/wwwroot/styles/app.css
@@ -130,7 +130,7 @@
 .chat-window .message-pane {
   overflow-y: scroll;
   position: relative;
-  height: 500px;
+  height: 400px;
   display: block;
   zoom: 1;
 }
@@ -174,6 +174,11 @@
   color: white;
   border-radius: 2px;
   border: 1px solid black;
+}
+.product-box {
+  margin: 3px;
+  border: 1px solid black;
+  padding: 5px 10px;
 }
 body,
 html {
