--- a/qarin/app/less/app.less
+++ b/qarin/app/less/app.less
@@ -22,3 +22,17 @@ body, html {
 
     // color: white;
 }
+
+.debug-hover {
+	position: absolute;
+
+	&.left {
+		left: 0;
+		top: 0;
+	}
+
+	&.right {
+		right: 0;
+		top: 0;
+	}
+}
