--- a/qarin/app/less/products.less
+++ b/qarin/app/less/products.less
@@ -1,23 +1,39 @@
 .product-box {
     //margin: 3px;
-    border: 1px solid black;
-    padding: 5px 10px;
-    position: relative;
-    display: inline-block;
 
-    .image-container {
-        padding: 0;
-    }
+    //padding: 5px 10px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+        
+	border: 1px solid gray;
+
+	cursor: pointer;
+	&:hover {
+		background-color: #666;
+	}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
+}
+
+.image-container {
+    padding: 0;
     
     img {
         max-width: 100%;
         height: auto;
     }
 }
+
 .search-results {
     position: relative;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+
+    
 }
