created TaskService + screen for aladdin

--- a/aladdin/app/layout/shell.html
+++ b/aladdin/app/layout/shell.html
@@ -5,7 +5,7 @@
     <div class="float-container">
         <div class="side-bar" ng-include="'app/areas/aside/aside.html'"></div>
 
-        <div ui-view class="content">
+        <div ui-view class="content container-fluid">
             {{vm.message}}
         </div>
     </div>
