--- a/aladdin/app/less/chat.less
+++ b/aladdin/app/less/chat.less
@@ -59,40 +59,55 @@
     //bottom: 0;
     //right: 0;
     //display: table-row;
-    height: 100%;
-    //display: table;
+    
+    //height: 100%;
+    //max-height: 500px;
+    height: 500px;
 	position: relative;
+    width: 400px;
+    white-space: normal;
 
     .message-pane {
         //display: table-cell;
-        overflow-y: scroll;
+        overflow-y: auto;
         position: relative;
-        //max-height: 400px;
-        //height: 100%;
-        height: 400px;
+        max-height: 500px;
+        height: 100%;
+        //height: 400px;
         .clearfix;
+
+        margin-bottom: 36px;
     }
 
     .chat-controls {
         //display: table-row;
         position: absolute;
-        bottom: 1px;
+        bottom: -36px;
         //height: 30px;
         //border: 1px solid red;
     }
 }
 
+.chat-line {
+
+}
+
 .chat-bubble {
     width: 300px;
     margin: 5px;
+    //position: absolute;
+    //display: inline-block;
+
     &.sent {
         float: right;
+        //text-align: right;
         .message-body {
             background-color: green;
         }
     }
     &.received {
         float: left;
+        //text-align:left;
         .message-body {
             background-color: rgb(80, 80, 255);
         }
@@ -101,6 +116,7 @@
         color: red;
         font-size: 10px;
         font-family: 'Arial';
+        //text-align: left;
     }
     .message-body {
         display: block;
@@ -109,5 +125,8 @@
         color: white;
         border-radius: 2px;
         border: 1px solid black;
+        white-space: normal;
+
+        //text-align: left;
     }
 }
