--- a/aladdin/app/less/tasks.less
+++ b/aladdin/app/less/tasks.less
@@ -1,10 +1,16 @@
+@import "mixins";
+
 .task-list {
 	padding: 0;
+    //white-space: nowrap;
 }
 
 .task {
-    //width: 120px;
-    min-height: 50px;
+    width: 150px;
+    height: 80px;
+    display: inline-block;;
+
+    //min-height: 50px;
     border: 1px solid black;
     border-left-width: 10px;
 
@@ -12,6 +18,15 @@
     padding-left: 6px;
     list-style: none;
 	margin: 5px;
+    vertical-align: top;
+
+    a {
+        color: black;
+
+        &:hover, &:focus {
+            text-decoration: none;
+        }
+    }
 
     &.request {
         border-color: red;
@@ -31,7 +46,12 @@
 }
 
 .task-details {
-	border: 1px solid green;
-	min-height: 300px;
+	//border: 1px solid green;
+	//min-height: 300px;
 	padding: 10px;
+    width: 400px;
+}
+
+.task-header {
+    //.clearfix;
 }
