--- a/solomon/app/less/aside.less
+++ b/solomon/app/less/aside.less
@@ -35,7 +35,9 @@ aside {
     // 	padding:10px !important;
     // }
 }
-
+.active {
+    background-color: green !important;
+}
 .side-bar {
 	//display:inline-block;
 //	width: 200px;
