started working on setting employee status

--- a/solomon/app/layout/header.html
+++ b/solomon/app/layout/header.html
@@ -1,7 +1,7 @@
 <div class="top-bar" ng-controller="HeaderController as vm">
 
     <div class="brand">
-        genie
+        solomon
     </div>
     <div class="selections pull-left">
     	<select ng-model="vm.org" 
