--- a/aladdin/app/less/header.less
+++ b/aladdin/app/less/header.less
@@ -1,30 +1,75 @@
 @import "colors";
 @import "mixins";
-
 .top-bar {
-	min-height: 20px;
-	background-color: green;
-	color: white;
-
-	.clearfix;
+    min-height: 20px;
+    background-color: @header;
+    color: white;
+    .clearfix;
 }
-
 .avatar {
-	padding: 10px;
-	vertical-align: middle;
-	color: white;
-	display:inline-block;
-
+    padding: 10px;
+    vertical-align: middle;
+    color: white;
+    display: inline-block;
 }
-
 .brand {
-	width: 200px;
-	background-color: @dk;
-	display: inline-block;
-	float: left;
-	padding: 10px;
+    width: 200px;
+    background-color: @dk;
+    display: inline-block;
+    float: left;
+    padding: 10px;
+    color: white;
+}
+select {
+    background-color: gray;
+}
+.avatar {
+    position: relative;
+    display: inline-block;
+    white-space: nowrap;
+    border-radius: 500px;
+    margin-top: -10px;
+    font-size: 25px;
+    // vertical-align: bottom;
 }
 
-select {
-	background-color: gray;
+.dropdown {
+	   &> a {
+            color: white;
+            &:hover, &:focus {
+                text-decoration: none;
+                background-color: @header-hover;
+            }
+        }
 }
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+	background-color: @header-hover;
+}
+.navbar-inverse .navbar-nav > li > a {
+color: white;
+}
+
+.navbar-inverse {
+	border:0;
+	margin:0;
+
+	.navbar-brand:hover {
+		background-color: inherit;
+	}
+
+}
+
+.dropdown-menu {
+    a {
+        background: white;
+    }
+}
+// .thumb-sm {
+//     display: inline-block;
+//     width: 40px;
+//     margin-left: 10px;
+//     i {
+//         font-size: 30px;
+//     }
+// }
