devices now auto register + fixed chat layout

--- a/qarin/app/less/chat.less
+++ b/qarin/app/less/chat.less
@@ -51,21 +51,13 @@
     position: relative;
     //border: 1px solid black;
     //display: table;
-    height: 540px;
+    //height: 540px;
 }
 
 .chat-window {
-    //width: 400px;
-    //border: 1px solid black;
-    //min-height: 300px;    
+    
     //height: 100%;
-    //position: absolute;
-    //height: 100vh;
-    //bottom: 0;
-    //right: 0;
-    //display: table-row;
-    height: 100%;
-    //display: table;
+    
 	position: relative;
 
     .message-pane {
@@ -74,8 +66,10 @@
         position: relative;
         //max-height: 400px;
         //height: 100%;
-        height: 400px;
+        //height: 400px;
         .clearfix;
+        border: 1px solid red;
+        padding-bottom: 40px;
     }
 
     .chat-controls {
