--- a/qarin/app/less/app.less
+++ b/qarin/app/less/app.less
@@ -3,7 +3,7 @@
 @import "splash";
 @import "header";
 @import "components";
-@import "chat"; 
+@import "chat";
 @import "products";
 @import "organizations";
 
@@ -12,27 +12,61 @@ body, html {
     padding: 0;
 }
 
-.device-root {
-    width: 360px;
-    height: 640px;
-    margin: 0 auto;
-    border: 1px solid black;
-    position: relative;
-    //background-color: #999; 
+// @media (min-width: 400) {
+//     .device-root {
+//         width: 360px;
+//         height: 640px;
+//         margin: 0 auto;
+//         border: 1px solid black;
+//         position: relative;
+//     }
+// }
 
-    // color: white;
+body {
+	//overflow-y: hidden;
+}
+
+// http://stackoverflow.com/questions/4069734/cross-browser-fixed-header-footer-and-scrollable-content
+
+.device-root {
+	height: 100vh;
+	position: relative;
+	//overflow-y: scroll;
+	//padding-bottom: 40px;
+
+	width: 100%;
+    //height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+border: 1px solid black;
+
+}
+.content-area {
+	overflow-y: scroll;
+	//min-height: 100%;
+	//max-height: 100%;
+	height: 100%;
 }
 
 .debug-hover {
-	position: absolute;
-
-	&.left {
-		left: 0;
-		top: 0;
-	}
-
-	&.right {
-		right: 0;
-		top: 0;
-	}
+    position: absolute;
+    &.left {
+        left: 0;
+        top: 0;
+    }
+    &.right {
+        right: 0;
+        top: 0;
+    }
+}
+ 
+.device-footer {
+	//position: fixed;
+	bottom: 0;
+	border: 1px solid black;
+	width: 100%;
+	background-color: white;
+	z-index: 900;
 }
