--- a/qarin/app/areas/layout/header.html
+++ b/qarin/app/areas/layout/header.html
@@ -1,4 +1,4 @@
-<div class="top-bar" ng-controller="HeaderController as vm">
+<div ng-controller="HeaderController as vm">
 	<span class="pull-right">
 		<i class="glyphicon glyphicon-bell"></i>		
 		<span class="badge">			
