--- a/qarin/app/less/header.less
+++ b/qarin/app/less/header.less
@@ -1,5 +1,14 @@
+@import "mixins";
+
 .top-bar {
+	.clearfix;
 	background-color: green;
 	min-height: 30px;
 	color: white;
+	z-index: 200;
+
+	.drop-shadow(0, 2px);
+	// -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+ //    -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+ //    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 }
