added response transformer. added departments

--- a/qarin/app/less/layout.less
+++ b/qarin/app/less/layout.less
@@ -31,6 +31,8 @@ body, html {
 .content-area {
 	overflow-y: auto;
 	height: 100%;
+
+    
 }
 
 .debug-hover {
@@ -46,8 +48,8 @@ body, html {
 }
  
 .device-footer {
-	width: 100%;
-	background-color: white;
-	z-index: 900;
-	bottom: 4px;
+	// width: 100%;
+	// background-color: white;
+	// z-index: 900;
+	// bottom: 4px;
 }
