--- a/qarin/app/less/products.less
+++ b/qarin/app/less/products.less
@@ -37,3 +37,38 @@ a {
 
     
 }
+
+.department-card {
+    width: 100px;
+    height: 130px;
+
+    display: inline-block;
+    //border: 1px solid gray;
+    position: relative;
+    vertical-align: top;
+    text-align: center;
+ 
+    margin: 5px;
+    background-color: white;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+    .name {
+        position: absolute;
+        bottom: 3px;
+        text-align: center;
+        display: block;
+        width: 100%;
+
+        //font-weight: bold;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100px; //100%;
+
+        margin: 0 auto;
+        width: auto;
+        height: auto;
+    }
+}
