--- a/qarin/app/less/chat.less
+++ b/qarin/app/less/chat.less
@@ -6,6 +6,10 @@
 
 .chat-controls {
     margin-bottom: 5px;
+
+    //-webkit-box-shadow: inset 0px -1px 6px 0px rgba(0,0,0,0.25);
+    //-moz-box-shadow:    inset 0px -1px 6px 0px rgba(0,0,0,0.25);
+    box-shadow:          0px -1px 6px 0px rgba(0,0,0,0.25);
 }
 
 .chat-log-list-item {
@@ -53,11 +57,16 @@
 
 #chat {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 .chat-window {
 
 	//position: relative;
+    overflow-y: auto;
+    height: 100%;
 
     .message-pane {
 
