--- a/qarin/app/less/products.less
+++ b/qarin/app/less/products.less
@@ -1,3 +1,6 @@
+
+@import "mixins";
+
 .product-box {
     //margin: 3px;
 
@@ -71,4 +74,31 @@ a {
         width: auto;
         height: auto;
     }
+}
+
+.rating-container {
+    .clearfix;
+    position: relative;   
+    width: 140px;
+    height: 20px;
+}
+
+.rating {
+    position: absolute;
+    left: 0;
+    font-size: 200%;
+}
+
+.rating-value {
+    width: 70px;
+    overflow: hidden;
+    white-space: nowrap;
+    //border: 1px solid red;
+}
+
+//https://github.com/ericdrowell/Pure-CSS-Multiline-Ellipsis
+.product-description {
+    max-height: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
