--- a/solomon/app/less/layout.less
+++ b/solomon/app/less/layout.less
@@ -20,3 +20,13 @@ body {
 .debug-panel {
     margin-left: 200px;
 }
+
+.card {
+	margin-bottom: 20px;
+	background-color: #fff;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+}
