charts + clean ups

--- a/qarin/app/less/chat.less
+++ b/qarin/app/less/chat.less
@@ -112,3 +112,9 @@
         border: 1px solid black;
     }
 }
+
+.image-container {
+    width: 90px;
+    display: inline-block;
+    margin-right: 10px;
+}
