--- a/solomon/app/less/tickets.less
+++ b/solomon/app/less/tickets.less
@@ -68,3 +68,46 @@
     text-align: center;
     display: block;
 }
+
+.ticket-detail {
+    
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+    border: 1px solid black;
+    
+    section {
+        margin-left: -15px;
+        //margin-right: -15px;
+
+        padding-left: 15px;
+        padding-right: 15px;
+
+        flex: 1 auto;
+        //border: 1px solid blue;        
+    }
+
+    aside {
+        //margin-left: -15px;
+        margin-right: -15px;
+
+        padding-left: 15px;
+        padding-right: 15px;
+        
+        flex: 0 0 250px;
+        
+        background-color: gray;
+        
+        .image-container {
+            width: 50px;
+        }
+
+    }
+}
+
+.detail-block {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
