reworked tasks. tweaked flow. added more graphs

--- a/aladdin/app/less/tasks.less
+++ b/aladdin/app/less/tasks.less
@@ -43,6 +43,13 @@
 	&.selected {
 		background-color: gray;
 	}
+
+	&.aborted {
+		border-color: red;
+	}
+}
+.task.aborted {
+	border-color: red;
 }
 
 .task-details {
