--- a/qarin/app/areas/layout/header.html
+++ b/qarin/app/areas/layout/header.html
@@ -1,13 +1,13 @@
 <div ng-controller="HeaderController as vm">
 	<span class="pull-right">
-		<i class="glyphicon glyphicon-bell"></i>		
-		<span class="badge">			
+		<i class="glyphicon glyphicon-bell"></i>
+		<span class="badge">
 			{{vm.notifications.length}}
 		</span>
 	</span>
     <div class="brand">
-        qarin
-    </div>    
+        <a ui-sref="home">qarin</a>
+    </div>
 </div>
 
 <!-- <div ui-view="notifications"></div> -->
