--- a/solomon/app/less/layout.less
+++ b/solomon/app/less/layout.less
@@ -26,11 +26,6 @@ body {
     margin-left: 200px;
 }
 
-.chart {
- width: 500px;
- height: 200px;
-}
-
 .row-sm {
     margin-right: -10px;
     margin-left: -10px;
@@ -50,7 +45,7 @@ body {
     background-color: #fff;
     border: 1px solid transparent;
     // border-radius: 4px;
-    
+
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     text-align: center;
@@ -97,4 +92,8 @@ body {
             order: -1;
         }
     }
+}
+
+flot {
+    display: block;
 }
