--- a/qarin/app/less/header.less
+++ b/qarin/app/less/header.less
@@ -11,4 +11,15 @@
 	// -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
  //    -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
  //    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+
+	.brand a{
+		color: white;
+		font-size: 20px;
+		margin: 3px;
+
+		&:hover {
+			text-decoration: none;
+
+		}
+	}
 }
