clean ups + small tweaks

--- a/aladdin/app/less/layout.less
+++ b/aladdin/app/less/layout.less
@@ -28,16 +28,17 @@ body {
 	overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
-    
+
     position: relative;
     width: 100%;
-    
-	& > div {		
+
+	& > div {
         vertical-align: top;
         display: inline-block;
+        white-space: initial;
 
         margin-right: 15px;
-    
+
         & > section {
             min-width: 400px;
             height: 600px;
