--- a/aladdin/app/less/tasks.less
+++ b/aladdin/app/less/tasks.less
@@ -56,9 +56,14 @@
 	//border: 1px solid green;
 	//min-height: 300px;
 	padding: 10px;
-    width: 400px;
+    //width: 400px;
 }
 
 .task-header {
     //.clearfix;
+}
+
+.product-detail {
+	width: 420px;
+	//padding: 10px;
 }
