--- a/qarin/app/less/header.less
+++ b/qarin/app/less/header.less
@@ -23,3 +23,16 @@
 		}
 	}
 }
+
+.notification {
+
+	&.unread {
+		background-color: yellow;
+	}
+
+	&.notification-ticket:before {
+		content: '\e041';
+		font-family: 'Glyphicons Halflings';
+		margin-right: 10px;
+	}
+}
